Changed button behavior. Play round is now play game, and from then on the game will accept either voice or mouse.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <span>Computer: <span class="computer-score"></span></span>
       </section>
       <section class="player-pane">
-        <button class="next-round" type="button">Play round!</button>
+        <button class="play-game" type="button">Play round!</button>
         <button class="player-option btn rock" value="rock">Rock</button>
         <button class="player-option btn paper" value="paper">Paper</button>
         <button class="player-option btn scissors" value="scissors">Scissors</button>
